--- a/src/css/style.css
+++ b/src/css/style.css
@@ -105,3 +105,98 @@ body {
     margin-right: 8px;
 }
 
+/* --------------------------------- carusel -------------------------------- */
+
+#carousel-feature{
+    background-color: #f7f8f3;
+    height: 400px;
+    padding-top: 15px;
+}
+#carousel-feature .carousel-inner  .carousel-item .row img{
+    height: 375px !important;
+}
+
+#carousel-feature .product-details{
+    border: 1px solid #ddd;
+    padding: 20px;
+    position: relative;
+    top: 50px;
+    height: 200px;
+    width: 85%;
+    background-color: #f7f8f3;
+
+}
+#carousel-feature .product-details h1 {
+    font-weight: 700;
+    font-size: 175%;
+    margin-top: 18px;
+}
+#carousel-feature .product-details .product-category{
+    border: 1px solid #ddd;
+    padding: 10px;
+    position: absolute;
+    top: -21px;
+    right: -15px;
+    background-color: #f7f8f3;
+}
+.custom-btn-outline-warning{
+    border-color: transparent;
+    border-color: #f8ad47;
+    color: #f8ad47;
+}
+
+.custom-btn-outline-warning:hover,
+.custom-btn-outline-warning:active,
+.custom-btn-outline-warning:focus,
+.custom-btn-outline-warning:focus,
+.custom-btn-outline-warning:hover{
+    border-color: #b86d07;
+    color: #b86d07;
+}
+
+.sale{
+    background-color: #53ccd7;
+    color: #fff;
+    font-weight: bold;
+    position: absolute;
+
+}
+.sale.large{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    left: -15px;
+    top: -15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 130%;
+    padding: 35px;
+    line-height: 90%;
+    flex-direction: column;
+    transform: rotate(-25deg);
+}
+.custom-carosel-indicators{
+    position: absolute;
+    right: 62%;
+    top: 230px;
+}
+
+.custom-carousel-indicators-primary{
+    height: 70px;
+    width: 70px;
+    opacity: 1;
+    border: 2px solid #dddddb !important;
+    margin: 0 !important; 
+    margin-left: 5px !important;
+}
+.custom-carousel-indicators-primary.active {
+    border-color: #f8ad47 !important;
+}
+
+#carousel-feature .carousel-control-prev .fa-chevron-right,
+#carousel-feature .carousel-control-next .fa-chevron-left {
+    color: #868686;
+    font-size: 38px;
+}
+
