--- a/src/css/style.css
+++ b/src/css/style.css
@@ -200,3 +200,85 @@ body {
     font-size: 38px;
 }
 
+#stor-features {
+    box-shadow: 0 0 15px #EEF0EA;
+    background-image: url(../images/bg_features.png);
+    background-repeat: no-repeat;
+    position: relative;
+    top: -30px;
+    background-size: auto 60%;
+    background-color: #fff;
+    padding-bottom: 35px;
+    padding-top: 25px;
+    background-position: -10px -20px;
+}
+#stor-features .feature>img{
+    height: 30px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+}
+#stor-features .feature+.feature{
+    border-right: 1px solid #EEF0EA;
+}
+
+.heading {
+    font-size: 24px;
+    margin-bottom: 25px;
+}
+
+.price {
+    color: #53CCD7;
+}
+
+.rating {
+    color: #C2C2C2;
+}
+
+.rating .active {
+    color: #f3af41;
+}
+
+.overlay {
+    position: absolute;
+    background-color: rgba(83, 204, 215, 0.5);
+    height: 305px;
+    width: calc(100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: all .3s ease;
+}
+
+.overlay:hover {
+    opacity: 1;
+}
+
+.add-to-cart-btn{
+    color: #53CCD7;
+    background-color: #fff;
+    font-weight: 700;
+}
+
+.custom-thumbnail .sale{
+    padding: 5px 10px;
+    position: absolute;
+    left: 10px;
+    top: 7px;
+}
+.custom-thumbnail .sale::after{
+    content: "-";
+}
+.custom-carousel-indicators2{
+    bottom: -70px !important;
+}
+.custom-carousel-indicators2 li{
+    width: 13px !important;
+    height: 13px !important;
+    margin: 2px !important;
+    background-color: #dbdbdb !important;
+}
+.custom-carousel-indicators2 li.active{
+    background-color: #565656 !important;
+}
+
