--- a/src/css/style.css
+++ b/src/css/style.css
@@ -259,7 +259,12 @@ body {
     background-color: #fff;
     font-weight: 700;
 }
-
+.custom-thumbnail{
+    border: 2px solid #EEF0EA;
+    padding: 8px;
+    cursor: pointer;
+    margin-bottom: 50px;
+}
 .custom-thumbnail .sale{
     padding: 5px 10px;
     position: absolute;
@@ -270,7 +275,7 @@ body {
     content: "-";
 }
 .custom-carousel-indicators2{
-    bottom: -70px !important;
+    bottom: -15px !important;
 }
 .custom-carousel-indicators2 li{
     width: 13px !important;
@@ -282,3 +287,33 @@ body {
     background-color: #565656 !important;
 }
 
+.panel{
+    border: 4px solid #EEF0EA;
+    border-radius: 2px;
+    padding: 20px;
+}
+.panel h4,
+.panel .price{
+    font-size: 130%;
+    margin-bottom: 15px;
+    margin-top: 0;
+}
+
+.custom-text-muted{
+    color: #a9a9a9;
+}
+
+.arrow-btn {
+    background-color: #fff;
+    color: #868686;
+    border: 1px solid #ededed;
+    border-radius: 2px;
+    padding: 5px 10px;
+    font-size: 12px;
+
+}
+#row-brands h3.heading{
+    border-top: 1px solid #EEF0EA;
+    padding-top: 25px;
+
+}
