--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,49 +16,29 @@ body {
     color: black;
 }
 
-.custom-navbar{
-    border-bottom: 3px solid #EEF0EA;
+
+.custom-navbar {
+    border-bottom: 3px solid #eef0ea;
     width: 100%;
-    background-color: #fff;
-    padding: 15px 0px;
+    background-color: #FFF;
+    padding: 15px 0;
 }
 
-.custom-form-control , .dropdown a.custom-btn{
-    border: 1px solid #ebebeb;
-    box-shadow: none;
-    border-radius: 2px;
-    color: #868686;
-    height: 38px;
-    padding: 6px 16px 7px;
-    transition: all 0.3s ease;
-}
 
-.custom-form-control:focus{
-    border-color: #c2101e;
-    box-shadow: 0 0 2px 0 #c2101e;
-}
 
-.dropdown a.custom-btn:hover{
-    background-color: #d4d4d4;
-    border: 1px solid #8c8c8c;
-    color: #ff3956 ;
-}
-.dropdown a.custom-btn:focus{
-    color: #ff3956;
-}
 
-.dropdown a.categories{
+.dropdown a.categories  {
     border-right: 0 !important;
     border-radius: 0;
-
 }
 
-.custom-dropdown-menu{
+.custom-dropdown-menu {
     border-radius: 2px;
-    box-shadow: 0 2px 5px 0 #ebebeb;
+    box-shadow: 0 2px 5px 0 #EBEBEB;
     color: #777;
 }
-.search-btn{
+
+.search-btn {
     background-color: #ff3956;
     border-color: #ff3956;
     color: #fff;
@@ -69,99 +49,93 @@ body {
     font-weight: 700;
     font-size: 14px;
 }
-.search-btn:hover,.search-btn:active,.search-btn:focus,.search-btn:active:focus,.search-btn:active:hover{
-    background-color:#c2101f ;
+
+.search-btn:hover,
+.search-btn:active,
+.search-btn:focus,
+.search-btn:active:focus,
+.search-btn:active:hover {
+    background-color: #C2101E;
+    border-color: #C2101E;
     color: #fff;
-    border-color: #c2101f;
 }
 
-.nav-link{
+.nav-link {
     color: #555555;
     font-size: 14px;
     padding: 15px;
 }
 
-.custom-navbar .navbar-nav li.active  a.nav-link{
+.custom-navbar .navbar-nav li.active a.nav-link {
     color: #ff3956;
     font-weight: 700;
     border-bottom: 1px solid #ff3956;
 }
 
-.custom-navbar .navbar-nav li.active  a.nav-link:hover{
+.custom-navbar .navbar-nav li.active:hover a.nav-link {
     background-color: #e7e7e7;
 }
 
-.custom-dropdown-menu li a:hover{
-    background-color: #ffe7ea;
+.custom-dropdown-menu li a:hover {
+    background-color: #FFE7EA;
 }
 
-.custom-navbar .btn-icon{
+.custom-navbar .btn-icon {
     padding: 5px 10px;
     color: #777;
     border: 1px solid #ddd;
     background-color: transparent;
     border-radius: 2px;
     font-size: 14px;
-    margin-right: 8px;
+    margin-right: 15px;
 }
 
-/* --------------------------------- carusel -------------------------------- */
 
-#carousel-feature{
-    background-color: #f7f8f3;
+/* قسم عارض الشرائح */
+
+#carousel-featured {
+    background-color: #F7F8F3;
     height: 400px;
-    padding-top: 15px;
-}
-#carousel-feature .carousel-inner  .carousel-item .row img{
-    height: 375px !important;
+    padding-top: 25px;
 }
 
-#carousel-feature .product-details{
-    border: 1px solid #ddd;
+#carousel-featured .carousel-item img {
+    height: 375px;
+}
+
+#carousel-featured .product-details {
+    border: 1px solid #DDDDDB;
     padding: 20px;
     position: relative;
     top: 50px;
     height: 200px;
-    width: 85%;
-    background-color: #f7f8f3;
-
+    background-color: #F7F8F3;
 }
-#carousel-feature .product-details h1 {
+
+#carousel-featured .product-details h1 {
     font-weight: 700;
     font-size: 175%;
     margin-top: 18px;
 }
-#carousel-feature .product-details .product-category{
-    border: 1px solid #ddd;
+
+#carousel-featured .product-details .product-category {
+    border: 1px solid #DDDDDB;
     padding: 10px;
     position: absolute;
-    top: -21px;
-    right: -15px;
-    background-color: #f7f8f3;
-}
-.custom-btn-outline-warning{
-    border-color: transparent;
-    border-color: #f8ad47;
-    color: #f8ad47;
+    top: -10px;
+    right: -10px;
+    background-color: #F7F8F3;
 }
 
-.custom-btn-outline-warning:hover,
-.custom-btn-outline-warning:active,
-.custom-btn-outline-warning:focus,
-.custom-btn-outline-warning:focus,
-.custom-btn-outline-warning:hover{
-    border-color: #b86d07;
-    color: #b86d07;
-}
 
-.sale{
-    background-color: #53ccd7;
+.sale {
+    background-color: #53CCD7;
     color: #fff;
     font-weight: bold;
     position: absolute;
-
 }
-.sale.large{
+
+.sale.large {
     height: 60px;
     width: 60px;
     border-radius: 50%;
@@ -176,31 +150,32 @@ body {
     flex-direction: column;
     transform: rotate(-25deg);
 }
-.custom-carosel-indicators{
-    position: absolute;
-    right: 62%;
-    top: 230px;
+
+.custom-carousel-indicators {
+    top: 235px;
+    right: 41%;
 }
 
-.custom-carousel-indicators-primary{
-    height: 70px;
-    width: 70px;
-    opacity: 1;
-    border: 2px solid #dddddb !important;
-    margin: 0 !important; 
+.custom-carousel-indicators-primary {
+    height: 70px !important;
+    width: 70px !important;
+    opacity: 1 !important;
+    border: 2px solid #DDDDDB !important;
+    margin: 0 !important;
     margin-left: 5px !important;
 }
+
 .custom-carousel-indicators-primary.active {
     border-color: #f8ad47 !important;
 }
 
-#carousel-feature .carousel-control-prev .fa-chevron-right,
-#carousel-feature .carousel-control-next .fa-chevron-left {
+#carousel-featured .carousel-control-prev .fa-chevron-right,
+#carousel-featured .carousel-control-next .fa-chevron-left {
     color: #868686;
     font-size: 38px;
 }
 
-#stor-features {
+#store-features {
     box-shadow: 0 0 15px #EEF0EA;
     background-image: url(../images/bg_features.png);
     background-repeat: no-repeat;
@@ -212,12 +187,13 @@ body {
     padding-top: 25px;
     background-position: -10px -20px;
 }
-#stor-features .feature>img{
-    height: 30px;
+
+#store-features .feature>img {
+    height: 40px;
     margin-bottom: 10px;
-    margin-top: 5px;
 }
-#stor-features .feature+.feature{
+
+#store-features .feature+.feature {
     border-right: 1px solid #EEF0EA;
 }
 
@@ -241,8 +217,8 @@ body {
 .overlay {
     position: absolute;
     background-color: rgba(83, 204, 215, 0.5);
-    height: 305px;
-    width: calc(100%);
+    height: 250px;
+    width: calc(100% - 16px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -254,66 +230,603 @@ body {
     opacity: 1;
 }
 
-.add-to-cart-btn{
-    color: #53CCD7;
-    background-color: #fff;
-    font-weight: 700;
-}
-.custom-thumbnail{
-    border: 2px solid #EEF0EA;
-    padding: 8px;
-    cursor: pointer;
-    margin-bottom: 50px;
-}
-.custom-thumbnail .sale{
+
+
+.custom-thumbnail .sale {
     padding: 5px 10px;
     position: absolute;
-    left: 10px;
-    top: 7px;
+    left: 16px;
+    top: 14px;
 }
-.custom-thumbnail .sale::after{
+
+.custom-thumbnail .sale::before {
     content: "-";
 }
-.custom-carousel-indicators2{
-    bottom: -15px !important;
+
+.custom-carousel-indicators2 {
+    bottom: -20px !important;
 }
-.custom-carousel-indicators2 li{
+
+.custom-carousel-indicators2>li {
     width: 13px !important;
     height: 13px !important;
     margin: 2px !important;
     background-color: #dbdbdb !important;
 }
-.custom-carousel-indicators2 li.active{
+
+.custom-carousel-indicators2>li.active {
     background-color: #565656 !important;
 }
 
-.panel{
+.panel {
     border: 4px solid #EEF0EA;
     border-radius: 2px;
     padding: 20px;
 }
+
 .panel h4,
-.panel .price{
+.panel .price {
     font-size: 130%;
     margin-bottom: 15px;
     margin-top: 0;
 }
 
-.custom-text-muted{
-    color: #a9a9a9;
+.custom-text-muted {
+    color: #A9A9A9;
 }
 
 .arrow-btn {
     background-color: #fff;
     color: #868686;
-    border: 1px solid #ededed;
+    border: 1px solid #EBEBEB;
     border-radius: 2px;
     padding: 5px 10px;
     font-size: 12px;
-
 }
-#row-brands h3.heading{
+
+#row-brands h3.heading {
     border-top: 1px solid #EEF0EA;
     padding-top: 25px;
-
 }
+
+#brand-logos {
+    background-color: #dbeefa;
+    padding: 25px 0;
+    color: #555555;
+}
+
+#brand-logos img {
+    margin-left: 25px;
+    margin-right: 25px;
+    max-width: 100px;
+    max-height: 100px;
+}
+
+#footer-nav {
+    background-color: #1f1e1e;
+    padding: 50px 0 40px;
+    background-image: url(../images/bg_footer_1.png), url(../images/bg_footer_2.png);
+    background-repeat: no-repeat, no-repeat;
+    background-position: 110% 0, -10% -150%;
+}
+
+.footer-nav-links {
+    margin: 30px 0;
+}
+
+.footer-nav-links a {
+    color: #555555;
+    margin-left: 30px;
+    font-weight: bold;
+    text-decoration: none !important;
+}
+
+.newsletter {
+    border-top: 1px solid #292929;
+}
+
+.newsletter form {
+    max-width: 260px;
+}
+
+.newsletter form label {
+    margin: 27px 0 16px;
+    font-size: 12px;
+    font-weight: bold;
+    color: #555555;
+}
+
+.newsletter form input {
+    background-color: #313131;
+    opacity: .6;
+    border: none;
+    height: 38px;
+}
+
+
+
+.newsletter form button {
+    border-radius: 0;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    font-size: 14px;
+    padding: 6px 12px 5px;
+    color: inherit;
+    height: 38px;
+}
+
+input[type="email"] {
+    text-align: right;
+}
+
+
+#footer-copyright-social {
+    background-color: #151515;
+    color: #303030;
+    padding: 30px 0;
+    font-weight: 700;
+}
+
+#footer-copyright-social a {
+    color: #303030;
+    margin: 0 5px;
+    text-decoration: none;
+}
+
+.btn:focus,
+.btn:active {
+    outline: none !important;
+    box-shadow: none !important;
+}
+.custom-btn-outline-warning{
+    border: 1px solid #f3af41;
+    color: #f3af41;
+}
+.custom-btn-outline-warning:hover{
+    background-color: #f3af41;
+    color: #fff;
+    border: 1px solid #fff;
+}
+.custom-btn-warning{
+    background-color: #f3af41;
+    color: #fff;
+}
+.custom-btn-warning:hover{
+    background-color: #e69f3c;
+    color: #fff;
+    border: none !important;
+}
+
+
+/*
+----- Product Page --------
+*/
+
+.custom-breadcrumb {
+    padding: 25px 0;
+}
+
+.custom-breadcrumb a {
+    color: #555;
+    text-decoration: none;
+}
+
+.custom-breadcrumb a:hover {
+    color: #F8AD47;
+}
+
+.custom-breadcrumb>li::before {
+    color: #F8AD47 !important;
+}
+
+.custom-breadcrumb .active {
+    color: #bfbfbf;
+}
+
+#carousel-product-images .carousel-indicators {
+    position: absolute;
+    top: 92%;
+    right: 0;
+}
+
+#carousel-product-images .carousel-item img {
+    width: 100%;
+    height: auto;
+    border: 1px solid #EBEBEB;
+}
+
+.product-category {
+    color: #A9A9A9;
+}
+
+#form-product-selection h2 {
+    font-weight: 700;
+    margin: 18px 0;
+}
+
+.price.large {
+    font-size: 30px;
+    margin-top: 20px;
+}
+
+.borders-between>div+div {
+    border-top: 1px solid #EBEBEB;
+    padding: 15px 0;
+}
+
+.product-option {
+    display: inline-block;
+    height: 23px;
+    width: 23px;
+    border: 1px solid #EBEBEB;
+    text-align: center;
+    justify-content: center;
+    color: #C2C2C2;
+    margin: 3px;
+    font-weight: 700;
+    /* cursor: pointer; */
+}
+
+.product-option input {
+    display: none;
+}
+
+.product-option.active {
+    color: #F8AD47;
+    border-color: #F8AD47;
+}
+
+.color-option.active {
+    border-color: #fff;
+    outline: #000 solid 1px;
+}
+
+.product-quantity select {
+    height: 34px !important;
+    padding: 6px 12px;
+    margin-right: 5px;
+}
+
+.custom-btn-with-icon {
+    margin: 15px 0;
+    font-size: 18px;
+    padding: 5px 10px;
+    color: #000;
+}
+
+.heading-with-border-bottom {
+    border-bottom: 1px solid #EBEBEB;
+    padding-bottom: 15px;
+}
+
+.heading-inline {
+    display: inline-block;
+    min-width: 250px;
+}
+
+.more-description p,
+.more-description ul {
+    margin-bottom: 10px;
+}
+
+.comments .comment img {
+    width: 80px;
+    height: 80px;
+    margin-left: 10px;
+    border: 1px solid #dfdfdf;
+}
+
+.comments .comment h4 {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+
+/*
+-------- Checkout Page ----------
+*/
+
+h1.custom-heading {
+    font-size: 36px;
+    margin-bottom: 25px;
+}
+
+.custom-media img {
+    width: 80px;
+    height: 80px;
+    border: 1px solid #EBEBEB;
+    margin-left: 10px;
+}
+
+
+
+#total-price-for-all-product {
+    color: #000;
+}
+
+
+
+/*
+--------- Payment Page ---------
+*/
+
+.custom-input-details {
+    border-width: 2px;
+    border-radius: 3px;
+    height: 46px !important;
+    padding: 0px 16px;
+    font-size: 18px;
+    width: 98%;
+}
+
+
+/*
+--------- Search page ----------
+*/
+
+#form-advanced-search {
+    border: 1px solid #EBEBEB;
+    padding-bottom: 20px;
+    margin-bottom: 35px;
+    height: fit-content;
+}
+
+#form-advanced-search .panel {
+    border: none;
+    padding: 5px;
+}
+
+
+.panel .card-header {
+    background-color: transparent;
+    margin-bottom: 15px;
+    padding-bottom: 13px;
+}
+
+.custom-list-group .list-group-item {
+    border: none;
+}
+
+.custom-list-group {
+    border-bottom: 1px solid #EBEBEB;
+}
+
+#form-advanced-search label {
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.custom-pagination .page-link {
+    margin-left: 3px !important;
+    margin-right: 3px !important;
+    border: 1px solid #EBEBEB !important;
+    width: 32px !important;
+    height: 32px !important;
+    color: #C2C2C2 !important;
+    text-decoration: none !important;
+    outline: none !important;
+    transition: all 0.3s ease !important;
+}
+
+.custom-pagination .page-item.active .page-link {
+    background-color: #F8AD47 !important;
+    color: #fff !important;
+    border-color: #F8AD47 !important;
+}
+
+.custom-pagination .page-link:active,
+.custom-pagination .page-link:focus,
+.custom-pagination .page-link:hover {
+    color: #F8AD47 !important;
+    background-color: #fff !important;
+    border-color: #F8AD47 !important;
+}
+
+/* صفحة التواصل */
+
+#map {
+    padding: 0;
+}
+
+#contact-options h4 {
+    font-size: 18px;
+}
+
+#contact-info .fa-lg {
+    color: #f3af41;
+    margin: 10px 0px 0px 10px;
+}
+
+#contact-options textarea {
+    height: 105px !important;
+}
+
+
+
+
+
+/* -------------------------------------------------------------------------- */
+/*                                    media                                   */
+/* -------------------------------------------------------------------------- */
+@media (max-width: 1399.98px) {  }
+
+
+@media (max-width: 1199.98px) {
+    .custom-navbar .navbar-nav li a.nav-link {
+        padding: 7px;
+    }
+
+    #carousel-featured .carousel-indicators {
+        margin-right: 12%;
+    }
+ }
+
+ 
+@media (max-width: 991.98px) { 
+
+    .custom-navbar {
+        padding: 15px 20px 30px;
+    }
+
+    .custom-navbar .container {
+        max-width: 100%;
+    }
+
+    .navbar-header {
+        display: block;
+        width: 100%;
+        margin-bottom: 22px;
+    }
+
+    .navbar-header .btn-icon {
+        float: left;
+    }
+
+    .inline-form {
+        width: 100%;
+        border-top: 1px solid #eee;
+        border-bottom: 1px solid #eee;
+        padding: 10px 0;
+    }
+
+    .inline-form .dropdown {
+        display: none;
+    }
+
+    .inline-form .custom-form-control {
+        width: 90%;
+    }
+
+    .inline-form .search-btn {
+        width: 10%;
+    }
+
+    .custom-navbar .navbar-nav li a.nav-link {
+        padding: 10px 0;
+    }
+
+    .navbar-collapse {
+        border-top: 1px solid #eee;
+        margin-top: 15px;
+        padding-top: 8px;
+    }
+
+    #carousel-featured .carousel-indicators {
+        margin-right: 4%;
+    }
+
+    .overlay {
+        display: none;
+    }
+
+    .add-to-cart-btn {
+        color: #868686;
+        border-color: #868686;
+        margin-top: 8px;
+        font-weight: 400;
+    }
+
+    #row-brands .carousel-inner img {
+        width: 200px !important;
+        height: auto !important;
+    }
+
+    #copyright,
+    #social-icons {
+        width: 100%;
+        text-align: center;
+    }
+
+    #social-icons {
+        font-size: 150%;
+        margin-top: 10px;
+    }
+
+    .product-images {
+        margin-bottom: 70px;
+    }
+
+    .product-option {
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        margin: 10px;
+        font-size: 20px;
+    }
+
+    .search-pagination {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    /*صفحة التواصل*/
+    #form-subscription {
+        margin-bottom: 25px;
+    }
+
+    #contact-options input[name=name]
+    {
+        margin-bottom: 15px;
+    }
+ }
+
+ @media (max-width: 767.98px) {
+
+    #carousel-featured {
+        padding-bottom: 25px;
+    }
+
+    #carousel-featured,
+    #carousel-featured .product-details {
+        height: auto;
+    }
+
+    #carousel-featured .product-details {
+        top: -2px;
+        text-align: center;
+    }
+
+    #carousel-featured .carousel-item img {
+        height: 250px;
+    }
+
+    #brand-logos img {
+        max-width: 50px;
+        max-height: 50px;
+        margin: 5px 24px 5px 23px;
+    }
+
+    #footer-nav .footer-logo {
+        margin-bottom: 30px;
+    }
+
+    #footer-nav form {
+        width: 100%;
+        max-width: 100%;
+        padding: 0 20px;
+    }
+
+    .hide-on-small {
+        display: none;
+    }
+}
+
+@media (max-width: 575.98px) { 
+    .inline-form .custom-form-control {
+        width: 80% !important;
+    }
+
+    .inline-form .search-btn {
+        width: 20% !important;
+    }
+
+    #brand-logos .img-container img {
+        margin: 5px 15px;
+    }
+
+    #form-product-selection,
+    .comments {
+        padding-right: 15px;
+    }
+ }
