--- a/src/css/style.css
+++ b/src/css/style.css
@@ -537,8 +537,43 @@ h1.custom-heading {
     border: 1px solid #EBEBEB;
     margin-left: 10px;
 }
-
-
+.custom-table th,
+.custom-table td {
+    padding: 15px;
+    font-size: 120%;
+    vertical-align: middle;
+    border-bottom: 1px solid #EBEBEB;
+    border-top: 1px solid #EBEBEB;
+}
+.custom-table h4 {
+    font-size: 18px;
+    margin: 12px 0;
+}
+.custom-table th {
+    color: #C2C2C2;
+    font-weight: normal;
+}
+.custom-table th:first-child,
+.custom-table td:first-child {
+    width: 50%;
+}
+.custom-table th:not(:first-child),
+.custom-table td:not(:first-child) {
+    text-align: center;
+}
+.custom-table tfoot td {
+    border-bottom: none;
+    font-size: 150%;
+}
+.custom-btn-outline-danger {
+    background-color: transparent;
+    border-color: #ff3956;
+    color: #ff3956;
+}
+.custom-btn-outline-danger:hover {
+    border-color: #b9001b;
+    color: #ff3956;
+}
 
 #total-price-for-all-product {
     color: #000;
