--- a/src/css/style.css
+++ b/src/css/style.css
@@ -217,8 +217,8 @@ body {
 .overlay {
     position: absolute;
     background-color: rgba(83, 204, 215, 0.5);
-    height: 306px;
-    width: calc(100%);
+    height: 250px;
+    width: calc(100% - 16px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -673,10 +673,14 @@ h1.custom-heading {
 }
 
 #contact-options textarea {
-    height: 105px !important;
+    height: 200px !important;
 }
 
-
+h3.custom-heading{
+    padding-bottom: 10px !important;
+    border-bottom: 1px solid #EBEBEB;
+    
+}
 
 
 
@@ -796,13 +800,21 @@ h1.custom-heading {
     }
 
     /*صفحة التواصل*/
-    #form-subscription {
-        margin-bottom: 25px;
+    #map {
+        padding: 0;
     }
-
-    #contact-options input[name=name]
-    {
-        margin-bottom: 15px;
+    
+    #contact-options h4 {
+        font-size: 18px;
+    }
+    
+    #contact-info .fa-lg {
+        color: #f3af41;
+        margin: 10px 0px 0px 10px;
+    }
+    
+    #contact-options textarea {
+        height: 105px !important;
     }
  }
 
